we added menu full identical like site with opacity 0.5

--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -151,6 +151,17 @@
     </div>
 
     <nav class=" nav-bottom-mobile">
+
+
+
+
+
+
+
+
+
+
+
         <ul  >
             <li><a href="https://www.pyramid-challenge.com">
                 Home
@@ -175,10 +186,133 @@
                     Sign in
                 </a>
             </li>
+            <li>
+                <a href="my-hotel-info.html">
+
+
+                    My Hotel Info
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+
+            <li>
+                <a href="hotek-guest.html">
+
+
+                    My Hotel Guests Report
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+            <li>
+                <a href="cities.html">
+
+
+                    Hotel Cities Report
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+
+            <li>
+                <a href="hotel-rooms.html">
+
+
+                    Hotel Rooms Report
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/offer-of-the-month">
+
+
+                    Offer Of The Month
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+
+            </li>
+            <li>
+                <a href="withdraw-profits.html">
+
+
+                    Withdraw Profits
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+
+            </li>
+
+
+            <li>
+                <a href="business-commitment.html">
+
+
+                    Your Business Commitment
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
+
+
+                    share post via facebook
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
+
+                    share video via facebook
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="forget-password.html">
+
+                    Change Hotel Password
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
+
+
+                    Share us your idea
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.pyramid-challenge.com ">
+
+
+                    Log Out Hotel Account
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+
+
         </ul>
     </nav>
 
 </section>
+<!-- end of nav-->
 
 <!-- end of nav-->
 <!-- start of form-->
