--- a/index-rtl.html
+++ b/index-rtl.html
@@ -12,73 +12,303 @@
 <body>
 
 
-<!-- start of  nav-->
+<!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
         <div class="nav-top">
-            <div class="logo">
+            <div class="logo wow fadeInUp" data-wow-duration="1.8s" data-wow-delay="1s">
                 <img src="img/logo.png" alt="logo">
             </div>
             <!--        logo -->
             <div class="second-logo">
                 <img src="img/second-logo.png" alt="logo">
+                <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
-                    <h2  class="wow slideInLeft" data-wow-duration="1s" >
-                        <span>التحدي الهرمي </span>
-                        <span> الفنادق الحديثة </span>
+                    <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
+                        <span>Pyramid Challenge</span>
+                        <span>Digital Hotels</span>
                     </h2>
-                    <p>من اجل منظر احسن انظر سطح الديسكتوب  </p>
+                    <p>for best content view , go to desktop , laptop </p>
                 </div>
                 <!--          text-second-logo  -->
             </div>
 
             <!--        second logo -->
             <div class="addational-register">
-                <div class="language btn">
-                    <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <option value="#">
-                            العربية</option>
-                        <option value="#">الاتكليزية </option>
 
-                    </select>
+                <div class="switch-lang">
+                    <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                        <p class="lang-text">English</p>
+                    </div>
+                    <div class="lang-dropdown">
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
+                            <p class="lang-text">Español</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
+                            <p class="lang-text">Français</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
+                            <p class="lang-text">Italiano</p>
+                        </div>
+                        <div class="selecting-lang">
+                            <img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png" alt=""/>
+                            <p class="lang-text">Deutsch</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="register btn">
-                    <a  href="#">تسجيل الدخول كزائر</a>
+                    <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="#">سجل الان </a>
+                    <a  href="index.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
+        </div>
+
+    </div>
+
+    <nav class="nav-bottom">
+        <ul  >
+            <li><a href="https://www.pyramid-challenge.com">
+                Home
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
+                About Us
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
+                Buy Digital Key
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/faq">
+                FAQ
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
+                Contact Us
+            </a></li>
+        </ul>
+    </nav>
+
+</section>
+<!-- mobile menu-->
+<section id="nav-mobile">
+    <div class="container">
+        <div class="mobile-logo">
+            <img src="img/second-logo.png" alt="logo">
+            <img src="img/second-logo2.png" alt="">
+        </div>
+        <div class="nav-top">
+
+            <!--        logo -->
+            <div class="second-logo">
+                <div class="logo wow fadeInUp" data-wow-duration="1.8s" data-wow-delay="1s">
+                    <img src="img/logo.png" alt="logo">
+                </div>
+                <div class="text-second-logo" >
+                    <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
+                        <span>Pyramid Challenge</span>
+                        <span>Digital Hotels</span>
+                    </h2>
+                    <div class="switch-lang">
+                        <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                            <p class="lang-text">English</p>
+                        </div>
+                        <div class="lang-dropdown">
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
+                                <p class="lang-text">Español</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
+                                <p class="lang-text">Français</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
+                                <p class="lang-text">Italiano</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
+                                <p class="lang-text">Deutsch</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--          text-second-logo  -->
+                <div class="menu-mobile">
+                    <a class="icon-span">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </div>
+
+            </div>
+            <div class="quote-text">
+                <p>for best content view , go to desktop , laptop </p>
+            </div>
+            <!--        second logo -->
 
         </div>
-        <div class="menu-mobile">
-            <a class="icon-span">
-                <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="50px" height="50px">
-            </a>
-        </div>
-        <nav class="nav-bottom">
-            <ul class="wow fadeInLeft" data-wow-duration="3s" data-wow-delay="2" >
-                <li><a href="index-rtl.html">
-                    الصفحة الرئيسية
-                </a></li>
-                <li><a href="about-us.html">
-                    من نحن
-                </a></li>
-                <li><a href="empty.html">
-                    اشتري مفتاح الالكتروني
-                </a></li>
-                <li><a href="empty.html">
-                    اللائحة
-                </a></li>
-                <li><a href="contact.html">
-                    اتصل بنا
-                </a></li>
-            </ul>
-        </nav>
+
     </div>
+
+    <nav class=" nav-bottom-mobile">
+
+
+
+
+
+
+
+
+
+
+
+        <ul  >
+            <li><a href="https://www.pyramid-challenge.com">
+                Home
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
+                About Us
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
+                Buy Digital Key
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/faq">
+                FAQ
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
+                Contact Us
+            </a></li>
+            <li><a href="#">
+                Register New Guest
+            </a></li>
+            <li>
+                <a href="#">
+                    Sign in
+                </a>
+            </li>
+            <li>
+                <a href="my-hotel-info.html">
+
+
+                    My Hotel Info
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+
+            <li>
+                <a href="hotek-guest.html">
+
+
+                    My Hotel Guests Report
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+            <li>
+                <a href="cities.html">
+
+
+                    Hotel Cities Report
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+
+            <li>
+                <a href="hotel-rooms.html">
+
+
+                    Hotel Rooms Report
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/offer-of-the-month">
+
+
+                    Offer Of The Month
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+
+            </li>
+            <li>
+                <a href="withdraw-profits.html">
+
+
+                    Withdraw Profits
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+
+            </li>
+
+
+            <li>
+                <a href="business-commitment.html">
+
+
+                    Your Business Commitment
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
+
+
+                    share post via facebook
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
+
+                    share video via facebook
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="forget-password.html">
+
+                    Change Hotel Password
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
+
+
+                    Share us your idea
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.pyramid-challenge.com ">
+
+
+                    Log Out Hotel Account
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+
+
+        </ul>
+    </nav>
+
 </section>
+<!-- end of nav-->
 
 <!-- end of nav-->
 <!-- start of form-->
