--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -178,11 +178,11 @@
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
-            <li><a href="#">
+            <li><a href="register-new-guest.html">
                 Register New Guest
             </a></li>
             <li>
-                <a href="#">
+                <a href="index.html">
                     Sign in
                 </a>
             </li>
@@ -429,7 +429,7 @@
                 </div>
                 <div class="checkbox">
                     <input type="checkbox" name="terms">
-                    <span>I Agree For Digital Hotels Terms&Conditions</span>
+                    <span>I Agree For Digital Hotels <a href="https://www.pyramid-challenge.com/terms-conditions">Terms&Conditions</a></span>
                 </div>
             </div>
 
