--- a/contact.html
+++ b/contact.html
@@ -177,11 +177,11 @@
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
-            <li><a href="#">
+            <li><a href="register-new-guest.html">
                 Register New Guest
             </a></li>
             <li>
-                <a href="#">
+                <a href="index.html">
                     Sign in
                 </a>
             </li>
