--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -15,7 +15,6 @@
 </head>
 <body>
 
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -41,23 +40,14 @@
             <div class="addational-register">
 
                 <div class="switch-lang">
-                    <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                    <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
                         <p class="lang-text">English</p>
                     </div>
                     <div class="lang-dropdown">
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
-                            <p class="lang-text">Español</p>
+                        <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
+                            <p class="lang-text">Arabic</p>
                         </div>
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
-                            <p class="lang-text">Français</p>
-                        </div>
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
-                            <p class="lang-text">Italiano</p>
-                        </div>
-                        <div class="selecting-lang">
-                            <img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png" alt=""/>
-                            <p class="lang-text">Deutsch</p>
-                        </div>
+
                     </div>
                 </div>
                 <div class="register btn">
@@ -113,22 +103,14 @@
                         <span>Digital Hotels</span>
                     </h2>
                     <div class="switch-lang">
-                        <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                        <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
                             <p class="lang-text">English</p>
                         </div>
                         <div class="lang-dropdown">
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
-                                <p class="lang-text">Español</p>
+                            <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
+                                <p class="lang-text">Arabic</p>
                             </div>
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
-                                <p class="lang-text">Français</p>
-                            </div>
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
-                                <p class="lang-text">Italiano</p>
-                            </div>
-                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
-                                <p class="lang-text">Deutsch</p>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -151,15 +133,6 @@
     </div>
 
     <nav class=" nav-bottom-mobile">
-
-
-
-
-
-
-
-
-
 
 
         <ul  >
