we added datepicker and other options to run the right Edits for the client

--- a/about-us.html
+++ b/about-us.html
@@ -360,7 +360,7 @@
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
-                <a href="#"></a>
+                <a href="business-commitment.html"></a>
                 <h2>
 
                     Your Business Commitment
