--- a/index.html
+++ b/index.html
@@ -297,13 +297,13 @@
     <form action="#" class="form">
             <div class="form-group " >
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="Enter your hotel number">
+                <input type="text" class="form-control" id="number" placeholder="Enter your hotel number" required>
             </div>
             <div class="form-group ">
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder="Enter your hotel password">
             </div>
-            <button class="submit ">Sign Up
+            <button class="submit ">Sign In
                 <i class="fas fa-chevron-right"></i>
         </button>
         </form>
