we made same animation and mofications to all inputs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .form-control:unfoucs:valid   {
+            background-color:  #96d3ec!important;
+        }
+    </style>
 </head>
 <body>
 
@@ -306,7 +311,11 @@
             <button class="submit ">Sign In
                 <i class="fas fa-chevron-right"></i>
         </button>
+        <a class="forget-pass" href="forget-password.html">
+            if you forgot your password or your hotel number , click here
+        </a>
         </form>
+
     </div>
 </section>
 <!-- end of form -->
@@ -329,5 +338,10 @@
 <script src="js/jquery.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
+<script>
+
+
+
+</script>
 </body>
 </html>
