--- a/business-commitment.html
+++ b/business-commitment.html
@@ -301,19 +301,19 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3>
                 you have determined your business commit
 
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3>
                 your goal ( your dream)  :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3>
                 your financial goal :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow rotateOut" data-wow-duration="1s">
+            <h3 >
                 registered guests from your hotel number :
                 <span>xxxxxx</span>
             </h3>
@@ -441,12 +441,17 @@
             </tr>
             <tr>
                 <td>6 Guests</td>
-                <td>60,000</td>
+                <td>300,000</td>
 
 
             </tr>
             <tr>
-                <td>7 Guests</td>
+                <td> 7 Guests</td>
+                <td>1000.000</td>
+
+            </tr>
+            <tr>
+                <td>more than 7 Guests</td>
                 <td>$ open limit</td>
 
             </tr>
