--- a/about-us.html
+++ b/about-us.html
@@ -360,7 +360,7 @@
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="business-commitment.html"></a>
+                <a href="business-commitment.html">
                 <h2>
 
                     Your Business Commitment
@@ -388,7 +388,7 @@
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
-                <a href="#">
+                <a href="forget-password.html">
                     <h2>
 
                         Change Hotel Password
