added some edits

--- a/business-commitment.html
+++ b/business-commitment.html
@@ -298,6 +298,11 @@
         <div class="section-back">
             <a href="about-us.html">Back to Hotel  Sections</a>
         </div>
+        <div class="section-title">
+            <h2  class=" wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s"><a href="#">
+                Business Commitment
+            </a></h2>
+        </div>
     </div>
     <div class="container">
         <div class="hotel-info">
