--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        .form-control:unfoucs:valid   {
-            background-color:  #96d3ec!important;
-        }
-    </style>
+
 </head>
 <body>
 
@@ -254,7 +250,7 @@
             </li>
 
             <li>
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/contact-us">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
