added some edits and modifcations

--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -340,16 +340,16 @@ Withdraw Profits
     <div class="container">
 
         <form action="#" class="form">
-            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
+            <div class="form-group">
                 <label for="number"></label>
                 <input type="text" class="form-control" id="number" placeholder="Enter Amount">
             </div>
-            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
+            <div class="form-group ">
                 <label for="password"></label>
                 <input type="text" class="form-control"  id="password" placeholder="Enter  your  paypal account">
             </div>
 
-            <button class="change wow fadeInRight"  data-wow-duration="6s"  >Request Profits</button>
+            <button class="change " >Request Profits</button>
         </form>
     </div>
 </section>
