added some edits 2

--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -294,47 +294,51 @@
 <!--
 -->
     <div class="container">
-        <div class="section-back wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s">
+        <div class="section-back wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
             <a href="about-us.html">Back to Hotel  Sections
             </a>
         </div>
         <div class="section-title">
-            <h2  class=" wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s"><a href="#">
+            <h2  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"><a href="#">
                 My Hotel Info:
             </a></h2>
         </div>
         <div class="hotel-info">
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 Hotel Owner Name :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 Email :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                  Phone :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 Birth Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 Country :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s" >
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" >
                 Gender :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 Hotel Open Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                your Hotel Number :
+                <span>
+                    xxxxxx
+                </span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 You Have Registered as a Guest in Hotel Number :
                 <span>xxxxxx</span>
             </h3>
