--- a/forget-password.html
+++ b/forget-password.html
@@ -297,7 +297,7 @@
         <div class="hotel-info">
             <h3 class="wow fadeOutLeft" data-wow-duration="1s">
                 <a href="#">
-                   Change your password
+                   Change Hotel password
                 </a>
             </h3>
 
