added some edits 3

--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -336,7 +336,7 @@
                 <th>Room number</th>
                 <th>Room open date</th>
                 <th>Guest Country</th>
-                <th>Registered in hotel np</th>
+                <th>Registered in hotel no</th>
                 <th>His Hotel Guests</th>
 
             </tr>
