edit link of pass

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <button class="submit ">Sign In
                 <i class="fas fa-chevron-right"></i>
         </button>
-        <a class="forget-pass" href="forget-password.html">
+        <a class="forget-pass" href="https://www.pyramid-challenge.com/contact-us">
             if you forgot your password or your hotel number , click here
         </a>
         </form>
