edit link of guest 2

--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -335,10 +335,21 @@
                 <label for="email"></label>
                 <input type="email" class="form-control"  id="email" placeholder="Enter your Email" required>
             </div>
+            <div class="form-group">
+                <label for="phone"></label>
+                <input type="text" class="form-control"  id="phone" placeholder="Enter your Phone" required>
+            </div>
 
             <div class="form-group">
                 <label for="country"></label>
-                <input type="text" class="form-control"  id="country" placeholder="Enter your Country" required>
+                <input type="text" class="form-control"  id="country" placeholder="Enter your Country or region" required>
+            </div>
+            <div class="form-group" >
+                <div id="inline" data-date="01/05/2020" >
+                    <label for="datepicker"></label>
+                    <input type="text" id="datepicker" name="datepicker"  placeholder="Your Birth Date">
+                </div>
+
             </div>
             <div class="form-group checkbox-group">
                 <div class="checkbox">
@@ -352,17 +363,11 @@
 
                 </div>
             </div>
-            <div class="form-group" >
-                <div id="inline" data-date="01/05/2020" >
-                    <label for="datepicker"></label>
-                    <input type="text" id="datepicker" name="datepicker"  placeholder="11/5/2021">
-                </div>
 
-            </div>
             <div class="form-group">
                 <div class="options">
                     <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
-                        <option>Set your dreams Goal</option>
+                        <option>Set your Goal(choose your dreams)</option>
                         <option > 1</option>
                         <option >2</option>
                         <option >3</option>
