--- a/hotek-guest.html
+++ b/hotek-guest.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/info/hotel-room.css">
     <link rel="stylesheet" href="css/info/hotel-guest.css">
     <style>
         #sections{
@@ -298,6 +299,17 @@
             <a href="about-us.html">Back to Hotel  Sections </a>
         </div>
     </div>
+    <div class="container">
+        <div class="hotel-info">
+            <h3 class="wow fadeOutLeft" data-wow-duration="1s">
+                <a href="#">
+                  My Hotel Guests Report
+                </a>
+            </h3>
+
+        </div>
+    </div>
+
 </section>
 <!-- end of form -->
 <!-- end of nav-->
