edit link of guest 3

--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -317,7 +317,7 @@
     <div class="container">
         <div class="options">
             <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required="">
-                <option value="" disabled="" class="Fbuif _2UHxr">view guest rooms in your hotel cities</option>
+                <option >view guest rooms in your hotel cities</option>
                 <option >view guest rooms in city no : 1</option>
                 <option >view guest rooms in city no : 2</option>
                 <option >view guest rooms in city no : 3</option>
