--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -298,7 +298,7 @@
         <form action="#" class="form">
             <div class="form-group">
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number  ">
+                <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number( who invite you ?) ">
             </div>
 
             <a href="register-new-guest-2.html" class="submit" >Next Step</a>
