--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -349,7 +349,7 @@ Withdraw Profits
                 <input type="text" class="form-control"  id="password" placeholder="Enter  your  paypal account">
             </div>
 
-            <button class="change " >Request Profits</button>
+            <button class="change " >Request Report</button>
         </form>
     </div>
 </section>
@@ -368,7 +368,7 @@ Withdraw Profits
                 <th>#</th>
                 <th>ِAmount</th>
                 <th>Request Date</th>
-                <th>Send to Paypal</th>
+                <th>Send to your Paypal</th>
                 <th>Action</th>
             </tr>
             <tr>
