--- a/business-commitment.html
+++ b/business-commitment.html
@@ -300,7 +300,7 @@
         </div>
         <div class="section-title">
             <h2  class=" wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s"><a href="#">
-                Business Commitment
+                Your Business Commitment
             </a></h2>
         </div>
     </div>
@@ -416,43 +416,43 @@
             </tr>
             <tr>
                 <td>1  Guest</td>
-                <td>100$</td>
+                <td>$100</td>
 
 
             </tr>
             <tr>
                 <td>2 Guests</td>
-                <td>1000$</td>
+                <td>$1000</td>
 
 
             </tr>
             <tr>
                 <td>3 Guests</td>
-                <td>30,000$</td>
+                <td>$30,000</td>
 
 
             </tr>
             <tr>
                 <td>4 Guests</td>
-                <td>40,000</td>
+                <td>$40,000</td>
 
 
             </tr>
             <tr>
                 <td>5 Guests</td>
-                <td>50,000</td>
+                <td>$50,000</td>
 
 
             </tr>
             <tr>
                 <td>6 Guests</td>
-                <td>300,000</td>
+                <td>$300,000</td>
 
 
             </tr>
             <tr>
                 <td> 7 Guests</td>
-                <td>1000.000</td>
+                <td>$1000.000</td>
 
             </tr>
             <tr>
