--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -342,14 +342,14 @@ Withdraw Profits
         <form action="#" class="form">
             <div class="form-group">
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="Enter Amount">
+                <input type="text" class="form-control" id="number" placeholder="Enter amount - lowest amount is $ 20">
             </div>
             <div class="form-group ">
                 <label for="password"></label>
-                <input type="text" class="form-control"  id="password" placeholder="Enter  your  paypal account">
+                <input type="text" class="form-control"  id="password" placeholder="Enter  Paypal account to receive the amount">
             </div>
 
-            <button class="change " >Request Report</button>
+            <button class="change " >Request Profits</button>
         </form>
     </div>
 </section>
@@ -359,7 +359,7 @@ Withdraw Profits
         <div class="options">
           <h3>
               <a href="#">
-                  Withdraw Profits
+                  Withdraw Report
               </a>
           </h3>
         </div>
