added version mobile

--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -367,7 +367,7 @@
             <div class="form-group">
                 <div class="options">
                     <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
-                        <option>Set your Goal(choose your dreams)</option>
+                        <option>Set your Goal(choose your dream)</option>
                         <option > 1</option>
                         <option >2</option>
                         <option >3</option>
