--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -368,7 +368,7 @@ Withdraw Profits
                 <th>#</th>
                 <th>ِAmount</th>
                 <th>Request Date</th>
-                <th>Send to your Paypal</th>
+                <th>Send to  Paypal ِAccount</th>
                 <th>Action</th>
             </tr>
             <tr>
