--- a/forget-password.html
+++ b/forget-password.html
@@ -313,7 +313,7 @@
         <form action="#" class="form">
             <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
                 <label for="number"></label>
-                <input type="password" class="form-control" id="number" placeholder="Enter your  Password">
+                <input type="password" class="form-control" id="number" placeholder="Enter Hotel Current  Password">
             </div>
             <div class="form-group wow fadeInRight"  data-wow-duration="3s">
                 <label for="password"></label>
@@ -321,7 +321,7 @@
             </div>
             <div class="form-group wow fadeInRight"  data-wow-duration="4s">
                 <label for="passwordd"></label>
-                <input type="password" class="form-control"  id="passwordd" placeholder="Renter  new  password">
+                <input type="password" class="form-control"  id="passwordd" placeholder="Re-enter  new  password">
             </div>
             <button class="change wow fadeInRight"  data-wow-duration="6s"  >change Hotel password</button>
         </form>
