--- a/about-us.html
+++ b/about-us.html
@@ -150,6 +150,7 @@
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
+            <hr>
             <li><a href="register-new-guest.html">
                 Register New Guest
             </a></li>
@@ -158,6 +159,7 @@
                     Sign in
                 </a>
             </li>
+            <hr>
             <li>
                 <a href="my-hotel-info.html">
 
@@ -250,7 +252,7 @@
             </li>
 
             <li>
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/contact-us">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
