--- a/business-commitment.html
+++ b/business-commitment.html
@@ -156,6 +156,7 @@
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
+            <hr>
             <li><a href="register-new-guest.html">
                 Register New Guest
             </a></li>
@@ -164,6 +165,7 @@
                     Sign in
                 </a>
             </li>
+            <hr>
             <li>
                 <a href="my-hotel-info.html">
 
@@ -256,7 +258,7 @@
             </li>
 
             <li>
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/contact-us">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -290,7 +292,6 @@
     </nav>
 
 </section>
-<!-- end of nav-->
 <!-- end of nav-->
 <!-- start of form-->
 <section id="sections-hotel">
