--- a/contact.html
+++ b/contact.html
@@ -151,6 +151,7 @@
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
+            <hr>
             <li><a href="register-new-guest.html">
                 Register New Guest
             </a></li>
@@ -159,6 +160,7 @@
                     Sign in
                 </a>
             </li>
+            <hr>
             <li>
                 <a href="my-hotel-info.html">
 
@@ -251,7 +253,7 @@
             </li>
 
             <li>
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/contact-us">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
