--- a/empty.html
+++ b/empty.html
@@ -149,6 +149,7 @@
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
+            <hr>
             <li><a href="register-new-guest.html">
                 Register New Guest
             </a></li>
@@ -157,6 +158,7 @@
                     Sign in
                 </a>
             </li>
+            <hr>
             <li>
                 <a href="my-hotel-info.html">
 
@@ -249,7 +251,7 @@
             </li>
 
             <li>
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/contact-us">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
