--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -157,6 +157,7 @@
             <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
+            <hr>
             <li><a href="register-new-guest.html">
                 Register New Guest
             </a></li>
@@ -165,6 +166,7 @@
                     Sign in
                 </a>
             </li>
+            <hr>
             <li>
                 <a href="my-hotel-info.html">
 
@@ -257,7 +259,7 @@
             </li>
 
             <li>
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/contact-us">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
