--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/info/hotel-room.css">
 
     <link rel="stylesheet" href="css/info/register-new-guest2.css">
+
 </head>
 <body>
 
@@ -345,7 +346,7 @@
 
             <div class="form-group">
                 <label for="country"></label>
-                <input type="text" class="form-control"  id="country" placeholder="Enter your Country or region" required>
+                <input type="text" class="form-control"  id="country" placeholder="Enter your Country or Region" required>
             </div>
             <div class="form-group" >
                 <div id="inline" data-date="01/05/2020" >
@@ -357,7 +358,7 @@
             <div class="form-group checkbox-group">
                 <div class="checkbox">
                     <input type="checkbox" name="male" required>
-                    <span>Gender \ male</span>
+                    <span>Gender \ Male</span>
 
                 </div>
                 <div class="checkbox">
