--- a/hotek-guest.html
+++ b/hotek-guest.html
@@ -312,7 +312,7 @@
                 <th>Room open date</th>
                 <th>Guest Country</th>
                 <th>Guest phone</th>
-                <th>Guest Gmail</th>
+                <th>Guest Email</th>
 
             </tr>
             <tr>
