--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -355,14 +355,14 @@
                 <div class="options">
                     <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
                         <option>Set your Goal(choose your dream)</option>
-                        <option > 1</option>
-                        <option >2</option>
-                        <option >3</option>
-                        <option >4</option>
-                        <option >5</option>
-                        <option >6</option>
-                        <option >7</option>
-                        <option >8</option>
+                        <option > Buy A Car</option>
+                        <option >Buy A House</option>
+                        <option >Paying Off Debts</option>
+                        <option >Traveling Around The World</option>
+                        <option >Paying Education Costs</option>
+                        <option >Saving Marriage Costs</option>
+                        <option >Charitable Work</option>
+                        <option >Just For Saving Money</option>
 
                     </select>
                 </div>
@@ -372,14 +372,14 @@
                 <div class="options">
                     <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collectio" required>
                         <option >Set your Financial Goal</option>
-                        <option > 1</option>
-                        <option >2</option>
-                        <option >3</option>
-                        <option >4</option>
-                        <option >5</option>
-                        <option >6</option>
-                        <option >7</option>
-                        <option >8</option>
+                        <option >$ 100</option>
+                        <option >$  1000</option>
+                        <option >$  30,000</option>
+                        <option >$ 40,000</option>
+                        <option >$ 50,000</option>
+                        <option >$ 300,000</option>
+                        <option >$ 1,000,000</option>
+                        <option >$ Open Limit</option>
 
                     </select>
                 </div>
