--- a/hotek-guest.html
+++ b/hotek-guest.html
@@ -288,7 +288,7 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow fadeOutLeft" data-wow-duration="1s">
+            <h3 class="wow fadeOutRight" data-wow-duration="1s">
                 <a href="#">
                   My Hotel Guests Report
                 </a>
