--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 <!-- start of form-->
 <section id="form">
         <div class="form-title">
-            <h2 class=" wow fadeInLeft" data-wow-duration="1.9s" data-wow-delay="1s"><a href="#">
+            <h2 class=" wow fadeOutRight" data-wow-duration="1.9s" data-wow-delay="1s"><a href="#">
                 Login To Your Hotel Account
             </a></h2>
         </div>
