--- a/business-commitment.html
+++ b/business-commitment.html
@@ -401,7 +401,7 @@
 
             </tr>
             <tr>
-                <td>1  Guest</td>
+                <td>1  Guests</td>
                 <td>$100</td>
 
 
