--- a/forget-password.html
+++ b/forget-password.html
@@ -282,7 +282,7 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow fadeOutLeft" data-wow-duration="1s">
+            <h3 class="wow fadeOutRight" data-wow-duration="1s">
                 <a href="#">
                    Change Hotel password
                 </a>
