100% of animation part 2

--- a/empty.html
+++ b/empty.html
@@ -275,7 +275,7 @@
 <section id="sections-empty">
 
     <div class="container">
-        <div class="section-back wow fadeInLeft" data-wow-delay="1s" data-wow-duration="1s">
+        <div class="section-back wow fadeInRight" data-wow-duration="1s">
             <a href="about-us.html">Back to Sections  <i class="fas fa-chevron-right"></i></a>
         </div>
 
