100% of animation part 3

--- a/business-commitment.html
+++ b/business-commitment.html
@@ -396,7 +396,7 @@
         <table>
             <tr>
 
-                <th>Your Hotel Guest</th>
+                <th>Your Hotel Guests</th>
                 <th>Hotel maximum profits</th>
 
             </tr>
