--- a/about-us.html
+++ b/about-us.html
@@ -278,7 +278,7 @@
     <div class="container">
         <div class="section-title">
 
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s"
+            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
             >
             <a href="#">
                 Hotel Sections
