100% of animation part 4

--- a/cities.html
+++ b/cities.html
@@ -287,7 +287,7 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow fadeOutRight" data-wow-duration="1s">
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <a href="#">
                     Hotel Cities Report
                 </a>
