--- a/business-commitment.html
+++ b/business-commitment.html
@@ -285,7 +285,8 @@
             <a href="about-us.html">Back to Hotel  Sections</a>
         </div>
         <div class="section-title">
-            <h2  class=" wow fadeInLeft" data-wow-duration="2s" ><a href="#">
+            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+            ><a href="#">
                 Your Business Commitment
             </a></h2>
         </div>
