--- a/forget-password.html
+++ b/forget-password.html
@@ -282,7 +282,8 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow fadeOutRight" data-wow-duration="1s">
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+            >
                 <a href="#">
                    Change Hotel password
                 </a>
