--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -288,7 +288,7 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class="wow fadeOutRight" data-wow-duration="1s">
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <a href="#">
                     Hotel Rooms Report
                 </a>
