--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -278,7 +278,8 @@
 <!-- start of form-->
 <section id="form">
     <div class="form-title">
-        <h2 class="wow fadeOutRight" data-wow-duration="1s" ><a href="#" >
+        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+        ><a href="#" >
             Register New Guest
         </a></h2>
 
