100% of animation part 5

--- a/hotek-guest.html
+++ b/hotek-guest.html
@@ -288,7 +288,7 @@
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"></h2>
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <a href="#">
                   My Hotel Guests Report
                 </a>
