100% of animation part 8

--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 <!-- start of form-->
 <section id="form">
         <div class="form-title">
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-            >         <a>       Login To Your Hotel Account
+            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                <a href="index.html">       Login To Your Hotel Account
             </a></h2>
         </div>
 
