100% of animation part 11

--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -316,6 +316,12 @@
                 <option >view guest rooms in city no : 9</option>
                 <option >view guest rooms in city no : 10</option></select>
         </div>
+
+    </div>
+</section>
+<!--start table-->
+<section class="hotel-guest-table">
+    <div class="container">
         <table>
             <tr>
                 <th>#</th>
